# bsdiff-rs

./: Cargo.toml
src/: bspatch.rs  rspatch.rs
