[package]
authors = ["Andre Bogus <bogusandre@gmail.com>", "sencrash <scrash@tuta.io>"]
description = "Rust wrapper for Matthew Endsley's bsdiff implementation"
keywords = ["compression"]
license = "BSD2"
name = "bsdiff"
readme = "README.md"
repository = "https://github.com/PaperFoam/bsdiff-rs"
version = "0.1.0"

[dependencies]
brotli = { version = "3.3.0"}
bzip2 = "0.4.1"
error-chain = "0.5.0"

[lib]
name = "bsdiff"

[[bin]]
name = "rspatch"
path = "src/rspatch.rs"
test = false
